functionality_templates/loki-stack_func_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-loki-headless
  namespace: test-ns
  labels:
    app: loki
    chart: loki-2.16.0
    release: release-name
    heritage: Helm
    variant: headless
spec:
  clusterIP: None
  ports:
  - port: 3100
    protocol: TCP
    name: http-metrics
    targetPort: http-metrics
  selector:
    app: loki
    release: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-loki-memberlist
  namespace: test-ns
  labels:
    app: loki
    chart: loki-2.16.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: http
    port: 7946
    targetPort: memberlist-port
    protocol: TCP
  selector:
    app: loki
    release: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-loki
  namespace: test-ns
  labels:
    app: loki
    chart: loki-2.16.0
    release: release-name
    heritage: Helm
  annotations: {}
spec:
  type: ClusterIP
  ports:
  - port: 3100
    protocol: TCP
    name: http-metrics
    targetPort: http-metrics
  selector:
    app: loki
    release: release-name
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: release-name-promtail
  namespace: test-ns
  labels:
    helm.sh/chart: promtail-6.10.0
    app.kubernetes.io/name: promtail
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2.7.4
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: promtail
      app.kubernetes.io/instance: release-name
  updateStrategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: promtail
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/config: 82009e22fb5dd1cc32717be71e728f1fdbea29df04ab468fb01996d5dbcc42b9
        seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
    spec:
      serviceAccountName: release-name-promtail
      enableServiceLinks: true
      securityContext:
        runAsGroup: 0
        runAsUser: 25000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
      - name: promtail
        image: docker.io/grafana/promtail:2.7.4
        imagePullPolicy: Always
        args:
        - -config.file=/etc/promtail/promtail.yaml
        volumeMounts:
        - name: config
          mountPath: /etc/promtail
        - mountPath: /run/promtail
          name: run
        - mountPath: /var/lib/docker/containers
          name: containers
          readOnly: true
        - mountPath: /var/log/pods
          name: pods
          readOnly: true
        ports:
        - name: http-metrics
          containerPort: 3101
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsUser: 25000
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            memory: 128Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 250m
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: config
        secret:
          secretName: release-name-promtail
      - hostPath:
          path: /run/promtail
        name: run
      - hostPath:
          path: /var/lib/docker/containers
        name: containers
      - hostPath:
          path: /var/log/pods
        name: pods
      automountServiceAccountToken: false
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-loki
  namespace: test-ns
  labels:
    app: loki
    chart: loki-2.16.0
    release: release-name
    heritage: Helm
  annotations: {}
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: loki
      release: release-name
  serviceName: release-name-loki-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loki
        name: release-name-loki
        release: release-name
      annotations:
        checksum/config: f9b589982c89ac0bea7797751079655a51e67d7d41c063ed83f3ab5b4b110f60
        prometheus.io/port: http-metrics
        prometheus.io/scrape: 'true'
        seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
    spec:
      serviceAccountName: release-name-loki
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      initContainers: []
      containers:
      - name: loki
        image: grafana/loki:2.6.1
        imagePullPolicy: Always
        args:
        - -config.file=/etc/loki/loki.yaml
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: /data
          subPath: null
        ports:
        - name: http-metrics
          containerPort: 3100
          protocol: TCP
        - name: grpc
          containerPort: 9095
          protocol: TCP
        - name: memberlist-port
          containerPort: 7946
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 45
        readinessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 45
        resources:
          limits:
            memory: 1024Mi
            cpu: 1000m
          requests:
            memory: 1024Mi
            cpu: 1000m
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          runAsUser: 1001
        env: null
      nodeSelector: {}
      affinity: {}
      tolerations: []
      terminationGracePeriodSeconds: 4800
      volumes:
      - name: tmp
        emptyDir: {}
      - name: config
        secret:
          secretName: release-name-loki
      - name: storage
        emptyDir: {}
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
    seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
  labels:
    app: loki-stack
    chart: loki-stack-2.9.10
    release: release-name
    heritage: Helm
  name: release-name-loki-stack-test
  namespace: test-ns
spec:
  containers:
  - name: test
    image: bats/bats:1.8.2
    imagePullPolicy: Always
    args:
    - /var/lib/loki/test.sh
    volumeMounts:
    - name: tests
      mountPath: /var/lib/loki
    securityContext:
      capabilities:
        drop:
        - ALL
      allowPrivilegeEscalation: false
      runAsUser: 25000
      readOnlyRootFilesystem: true
      runAsNonRoot: true
    livenessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
    resources:
      requests:
        memory: 128Mi
        cpu: 250m
      limits:
        memory: 128Mi
        cpu: 250m
    readinessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
  restartPolicy: Never
  volumes:
  - name: tests
    configMap:
      name: release-name-loki-stack-test
  securityContext:
    seccompProfile:
      type: RuntimeDefault
    runAsUser: 25000
    runAsNonRoot: true
  automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
